<resources>
    <string name="app_name">Guess</string>
    <string name="guess">Guess</string>
    <string name="icon">icon</string>
    <string name="background_image">Background Image</string>
    <string name="your_guess">Your Guess</string>
    <string name="score_initial"></string>
    <string name="info">Please Enter a Number between 1 and 99</string>
    <string name="infoSectwo">Please Enter a Number between 1 and 499</string>
    <string name="infoSecThree">Please Enter a Number between 1 and 999</string>
    <string name="info_bigger">Please Enter a Bigger Number</string>
    <string name="info_smaller">Please Enter a Smaller Number</string>
    <string name="info_win">You Win! Your score: %1$d</string>
    <string name="info_lose">You lose!</string>
    <string name="error">Number cannot be empty!</string>
    <string name="score_updated">Your score: %1$d</string>
    <string name="new_game">New Game</string>
    <string name="guess_initial">Your Last Guess:</string>
    <string name="guess_updated">Your Last Guess: %1$d</string>
    <string name="textview">TextView</string>
    <string name="textview1">30</string>
    <string name="easy_stage">Easy</string>
    <string name="Inter_stage">Intermidaire</string>
    <string name="Hard_stage">Hard</string>
    <string name="play_now">Play Now</string>
    <string name="tap_at_play_now_to_start_a_new_game_or_choose_from_the_menu_the_appropriate_level_for_you">Tap at Play now to start a new game Or choose from the menu the appropriate level for you</string>
    <string name="todo">TODO</string>
    <string name="_1000">1000</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_age">Enter Age</string>
    <string name="add_name">Add Name</string>
    <string name="print_name">Print Name</string>
    <string name="name_n_n">Name\n\n</string>
    <string name="age_n_n">Age\n\n</string>
    <string name="todo2">TODO</string>
    <string name="choose_your_name">Choose Your Name!</string>
    <string name="choose_your_profile_picture">Choose your Profile Picture!</string>
    <string name="submit">Submit</string>
    <string name="your_name">Your Name</string>
    <string name="choose_your_level">choose your level</string>
    <string name="hard">Hard</string>
    <string name="easy">Easy</string>
    <string name="welcome_to_the_game">Welcome To The Game</string>
</resources>