<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="24dp"
    android:weightSum="21"
    android:background="@color/grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="top"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/Back_Button"
            android:layout_width="43dp"
            android:layout_height="43dp"
            android:background="@drawable/round_button"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            tools:ignore="TouchTargetSizeCheck">

        </ImageButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/textView"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="100dp"
            android:layout_height="43dp"
            android:layout_marginStart="90dp"
            android:backgroundTint="@color/bleu"
            android:text="@string/textview1"
            android:textColor="@color/white"
            app:cornerRadius="36dp"
            app:icon="@drawable/stopwatch"
            app:iconTint="@null"
            app:tint="@null"
            tools:ignore="TouchTargetSizeCheck">

        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonViewScore"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="120dp"
            android:layout_height="43dp"
            android:backgroundTint="@color/bleu"
            android:text="100"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            app:cornerRadius="36dp"
            app:icon="@drawable/score"
            app:iconTint="@null"
            app:tint="@null" />


    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_weight="5"
        android:contentDescription="@string/icon"
        android:gravity="center"
        android:scaleType="fitCenter"
        android:src="@drawable/logo" />

    <TextView
                android:id="@+id/textViewHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/new_game"
                android:textColor="@color/bleu"
                android:textSize="30sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutNumber"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="true"
                android:gravity="center"
                android:hint="@string/your_guess"
                app:boxBackgroundMode="filled">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif-condensed-light"
                    android:inputType="number"
                    android:textColorHint="#F7F7F7"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonGuess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/guess"
                android:backgroundTint="@color/bleu"
                />

    <TextView
        android:id="@+id/textViewHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="@string/info"
        android:textColor="#0D47A1"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewGuess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="@string/guess_initial"
        android:textColor="#0D47A1" />

</LinearLayout>