<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UserinfoActivity"
    android:orientation="vertical"
    android:padding="25dp"
    android:weightSum="21"
    android:background="@color/dar_bleu">
    <TextView
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        android:id="@+id/HintA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-condensed"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/welcome_to_the_game"
        android:textColor="@color/bleu"
        android:textSize="30sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:enabled="true"
        android:gravity="center"
        android:hint="Your name"
        app:boxBackgroundMode="filled">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Yourname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-condensed-light"
            android:inputType="text"
            android:textColorHint="#F7F7F7"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.chip.Chip
            android:id="@+id/buttonStage_Easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy" />

        <com.google.android.material.chip.Chip
            android:id="@+id/buttonStage_hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard" />

    </com.google.android.material.chip.ChipGroup>


    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/grey"
        android:backgroundTint="@color/bleu"
        />




</LinearLayout>

